fix hover on card on mobile

--- a/src/Components/UI/Project/ProjectCard/ProjectCard.css
+++ b/src/Components/UI/Project/ProjectCard/ProjectCard.css
@@ -4,7 +4,7 @@
 	overflow: auto;
 	margin-top: 20px !important;
 	box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
-	background-color: transparent;
+	background-color: transparent !important;
 }
 
 #MUI-Card:hover {
@@ -62,6 +62,14 @@
 @media (max-width: 455px) {
 	#MUI-Card {
 		width: 340px !important;
+		/* background-color: transparent !important; */
+	}
+}
+
+@media (min-width: 700px) {
+	#MUI-Card {
+		width: 300px !important;
+		background-color: var(--black) !important;
 	}
 }
 
